--- a/package.json
+++ b/package.json
@@ -28,19 +28,20 @@
     "vite": "^2.9.7"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "markdown": "^0.5.0",
+    "markdown-it": "^13.0.1",
+    "md5": "^2.3.0",
     "query-string": "^7.1.1",
+    "rollup-plugin-copy": "^3.4.0",
     "vite-plugin-vue2": "^2.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.14",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0",
-    "express": "^4.18.1",
-    "markdown": "^0.5.0",
-    "markdown-it": "^13.0.1",
-    "md5": "^2.3.0",
     "xml2js": "^0.4.23"
   }
 }
