--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/itorr/itorr#readme",
   "devDependencies": {
-    "vite": "^2.9.7"
+    "vite": "^3.0.0",
+    "vite-plugin-static-copy": "^0.9.0"
   },
   "dependencies": {
     "express": "^4.18.1",
